# demo

./: Dockerfile  README.md  docker-compose.yml  lefthook.yml  poetry.toml  pyproject.toml
.devcontainer/: devcontainer.json
certs/: cert-key.pem  cert.pem
src/: game_2048.py
src/app/: app.py  game.py
src/baazigar/: app.py  main.py
src/frontend/: index.html
tests/: test_app.py  test_baazigar.py
